fixed date alignment

--- a/src/components/EventDetail/EventDetail.scss
+++ b/src/components/EventDetail/EventDetail.scss
@@ -30,11 +30,11 @@
 }
 
 .eventDetailTitleDate{
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   justify-content: center;
   align-content: center;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
 }
 
 #eventDetailTitle{
@@ -42,16 +42,18 @@
   text-transform: uppercase;
   margin-bottom: 5px;
   color: #818181;
+  margin-left: 9px;
 }
 
 #eventDetailDate{
   margin-top: 0px;
   margin-bottom: -15px;
+  margin-left: 17px;
 }
 
 .eventDetailStackType{
   // border: 1px solid;
-  margin-left: 15px;
+  margin-left: 25px;
 }
 
 .eventDetailStackTypeDisplay{
@@ -110,6 +112,8 @@
   padding: 0px 10px;
   background: white;
   // min-height: 30px;
+  margin-left: 9px;
+  margin-right: 9px;
   box-shadow: 0 2px 4px 1px rgb(0 0 0 / 20%);
   margin-bottom: 10px;
 }
