--- a/src/components/EventNotes/EventNotes.scss
+++ b/src/components/EventNotes/EventNotes.scss
@@ -49,6 +49,8 @@
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 2px 4px 1px rgb(0 0 0 / 20%);
+  margin-left: 9px;
+  margin-right: 9px;
 }
 
 .deleteeventnotemodalbtns{
