--- a/src/components/EventTags/EventTags.scss
+++ b/src/components/EventTags/EventTags.scss
@@ -8,6 +8,8 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px 1px rgb(0 0 0 / 20%);
     margin-bottom: 10px;
+    margin-left: 9px;
+    margin-right: 9px;
 }
 
 .eventdetailtitleandreminder{
